updates geometry calc notebook

--- a/udtools/notebooks/geometry_calcs.ipynb
+++ b/udtools/notebooks/geometry_calcs.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# OpenCascade Geometry Processing\n",
     "\n",
-    "OCCT is a collection of 3D CAD libraries written in C++ and released under LGPL. It is \"designed for rapid production of sophisticated domain-specific CAD/CAM/CAE applications\" and provides the basis for FreeCAD and several open-source BIM projects. Python bindings are provided through at least two projects, [pyOCCT](https://github.com/trelau/pyOCCT) (\\~80 github stars, linux/win only) and [pythonocc-core](https://github.com/tpaviot/pythonocc-core) (\\~700 github stars, cross-platform including MacOS).\n",
+    "\"OpenCascade Technology\" (OCCT) is a collection of 3D CAD libraries written in C++ and released under LGPL. It is \"designed for rapid production of sophisticated domain-specific CAD/CAM/CAE applications\" and provides the basis for FreeCAD and several open-source BIM projects. Python bindings are provided through at least two projects, [pyOCCT](https://github.com/trelau/pyOCCT) (\\~80 github stars, linux/win only) and [pythonocc-core](https://github.com/tpaviot/pythonocc-core) (\\~700 github stars, cross-platform including MacOS).\n",
     "\n",
     "It is a large, complicated, old (begun in 1999) project that isn't widely used and therefore doesn't have extensive informal documentation (tutorials, examples and forums). Using OCCT in Python has the further complication of needing to translate between C++ and Python syntax. While documentation for pythonocc-core is available, it is not hosted online in an accessible format. There is, however, a repository containing [examples](https://github.com/tpaviot/pythonocc-demos) in Python.\n",
     "\n",
@@ -58,14 +58,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### foundation classes\n",
+    "# --- FOUNDATION CLASSES ---\n",
     "\n",
     "from OCC.Core.TColgp import TColgp_HArray1OfPnt, TColgp_Array1OfPnt2d, TColgp_Array1OfPnt\n",
     "from OCC.Core.TColgp import TColgp_SequenceOfPnt\n",
     "from OCC.Core.GeomAbs import GeomAbs_C2\n",
     "\n",
     "\n",
-    "### modeling data\n",
+    "# --- MODELING DATA ---\n",
     "\n",
     "from OCC.Core.gp import gp_Pnt, gp_Pnt2d, gp_Vec, gp_Dir, gp_Ax2, gp_Pln # primitives\n",
     "from OCC.Core.Geom2d import Geom2d_Curve\n",
@@ -73,16 +73,29 @@
     "from OCC.Core.gce import gce_MakePln, gce_MakeLin # direct construction\n",
     "from OCC.Core.TopoDS import TopoDS_Iterator\n",
     "from OCC.Core.BRepAdaptor import BRepAdaptor_CompCurve\n",
+    "from OCC.Core.Geom2dAdaptor import Geom2dAdaptor_Curve\n",
     "\n",
-    "### modeling algorithms\n",
+    "# --- MODELING ALGORITHMS ---\n",
     "\n",
     "# high-level modeling routines (boolean ops, construction of primitives, kinematics)\n",
     "from OCC.Core.BRepBuilderAPI import BRepBuilderAPI_MakeEdge, BRepBuilderAPI_MakeWire, BRepBuilderAPI_MakePolygon, BRepBuilderAPI_MakeFace, BRepBuilderAPI_MakeShell, BRepBuilderAPI_MakeSolid\n",
     "from OCC.Core.BRepOffsetAPI import BRepOffsetAPI_ThruSections\n",
     "\n",
     "# low-level mathematical support functions (intersections, projections, interpolations)\n",
-    "from OCC.Core.Geom2dAPI import Geom2dAPI_Interpolate, Geom2dAPI_PointsToBSpline\n",
-    "from OCC.Core.GeomAPI import GeomAPI_PointsToBSpline, GeomAPI_Interpolate, GeomAPI_PointsToBSplineSurface\n",
+    "from OCC.Core.Geom2dAPI import (\n",
+    "    Geom2dAPI_Interpolate, \n",
+    "    Geom2dAPI_PointsToBSpline,\n",
+    "    Geom2dAPI_InterCurveCurve,\n",
+    "    Geom2dAPI_ProjectPointOnCurve,\n",
+    ")\n",
+    "from OCC.Core.GeomAPI import (\n",
+    "    geomapi_To3d,\n",
+    "    geomapi_To2d,\n",
+    "    GeomAPI_PointsToBSpline,\n",
+    "    GeomAPI_Interpolate, \n",
+    "    GeomAPI_PointsToBSplineSurface,\n",
+    ")\n",
+    "from OCC.Core.GeomLib import geomlib\n",
     "\n",
     "\n",
     "### visualization\n",
@@ -94,7 +107,11 @@
     "### application framework\n",
     "\n",
     "from OCC.Core.BOPAlgo import BOPAlgo_MakeConnected, BOPAlgo_BuilderSolid\n",
-    "from OCC.Core.BRepAlgoAPI import BRepAlgoAPI_Fuse, BRepAlgoAPI_Common\n",
+    "from OCC.Core.BRepAlgoAPI import (\n",
+    "    BRepAlgoAPI_Fuse, \n",
+    "    BRepAlgoAPI_Common,\n",
+    "    BRepAlgoAPI_Cut,\n",
+    ")\n",
     "from OCC.Core.BRepPrimAPI import BRepPrimAPI_MakePrism\n",
     "from OCC.Core.ShapeUpgrade import ShapeUpgrade_UnifySameDomain\n",
     "from OCC.Core.TopTools import TopTools_ListOfShape\n",
@@ -112,11 +129,20 @@
    "outputs": [],
    "source": [
     "# add udtools core modules to path for testing\n",
-    "module_path = '../../core/python/'\n",
+    "module_path = '../python/'\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
     "    \n",
-    "from geometry.conversion import wkt_to_occ, wire_to_face, curve_to_wire"
+    "from geometry.conversion import (\n",
+    "    wkt_to_occ, \n",
+    "    wire_to_face, \n",
+    "    curve_to_wire, \n",
+    "    coords_to_array, \n",
+    "    coords_to_curve, \n",
+    "    curve_to_face, \n",
+    "    curve_to_wire,\n",
+    "    coords_to_polygon,\n",
+    ")"
    ]
   },
   {
@@ -143,7 +169,7 @@
    "id": "residential-posting",
    "metadata": {},
    "source": [
-    "Geometry primitives, provided by the [modeling data](https://dev.opencascade.org/doc/overview/html/index.html#intro_overview_moddata) module and prefixed as `gp_*` provide the basis for all geometric objects in OCCT. Boundary representations (BReps) are represented \"as an aggregation of geometry within topology\" where geometry describes a shape mathematically (curves, surfaces) and topology provides a data structure."
+    "Geometry primitives, provided by the [modeling data](https://dev.opencascade.org/doc/overview/html/index.html#intro_overview_moddata) module and prefixed as `gp_*` provide the basis for all geometric objects in OCCT. Boundary representations (BReps) are represented \"as an aggregation of geometry within topology\" where **geometry** describes a shape mathematically (curves, surfaces) and **topology** provides a data structure."
    ]
   },
   {
@@ -151,10 +177,22 @@
    "execution_count": 6,
    "id": "parental-orleans",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<class 'gp_Pnt'>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
    "source": [
     "point = (1.0, 1.0, 1.0)\n",
-    "occ_point = gp_Pnt(*point)"
+    "occ_point = gp_Pnt(*point)\n",
+    "occ_point"
    ]
   },
   {
@@ -172,19 +210,20 @@
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<class 'gce_MakeLin'>"
+       "<class 'gp_Lin'>"
       ]
      },
-     "execution_count": 7,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 7
     }
    ],
    "source": [
     "points = [None, (1.0, 1.0, 1.0), (1.0, 0.0, 0.0)]\n",
-    "gce_MakeLin(gp_Pnt(*points[1]), gp_Pnt(*points[2]))"
+    "occ_line = gce_MakeLin(gp_Pnt(*points[1]), gp_Pnt(*points[2]))\n",
+    "occ_line.Value()"
    ]
   },
   {
@@ -202,9 +241,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "points = [None, (1.0, 1.0, 1.0), (1.0, 0.0, 0.0), (2.0, 0.0, 0.0)]\n",
+    "points = [\n",
+    "  None, \n",
+    "  (0.0, 1.0, 1.0), \n",
+    "  (1.0, 0.0, 0.0), \n",
+    "  (2.0, 0.0, 0.0)\n",
+    "]\n",
     "\n",
     "occ_sequence = TColgp_SequenceOfPnt()\n",
+    "\n",
     "for pt in points[1:]:\n",
     "  occ_pt = gp_Pnt(*pt)\n",
     "  occ_sequence.Append(occ_pt)\n",
@@ -224,6 +269,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "<class 'gp_Pnt'>\n<class 'gp_Pnt'>\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "sharing-testament",
    "metadata": {},
@@ -238,13 +298,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
      "output_type": "stream",
+     "name": "stdout",
      "text": [
-      "Curve 1 is open and has a degree of 1\n",
-      "Curve 2 is closed and has a degree of 1\n",
-      "Curve 3 is open and has a degree of 1\n",
-      "Curve 4 is closed and has a degree of 1\n"
+      "Curve 1 is open and has a degree of 1\nCurve 2 is closed and has a degree of 1\nCurve 3 is open and has a degree of 1\nCurve 4 is closed and has a degree of 1\n"
      ]
     }
    ],
@@ -284,16 +341,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lines are infinitely long\n",
+    "# c2_lin = gce_MakeLin(gp_Pnt(*c2[0]), gp_Pnt(*c2[1])).Value()\n",
+    "# c2_lin_2d = geomapi_To2d(c2_lin, plane_2d)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "female-moldova",
    "metadata": {},
    "source": [
-    "Edges, wires, polygons faces etc (topology objects) can also be built up from points. Or, they can be converted from geometry objects. Curves can be converted to edges with `BRepBuilderAPI_MakeEdge`, and combined together into a wire with `BrepBuilderAPI_MakeWire`.`BRepAdaptor_CompCurve` can make a curve from a wire?"
+    "Topology objects like edges, wires, polygons, faces, etc. can also be built up from a sequence of points. Alternately, they can be converted from geometry objects. Curves can be converted to edges with `BRepBuilderAPI_MakeEdge`, and combined together into a wire with `BrepBuilderAPI_MakeWire`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "radical-savannah",
    "metadata": {},
    "outputs": [],
@@ -305,19 +373,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "outdoor-sweet",
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "<class 'TopoDS_Face'>"
       ]
      },
-     "execution_count": 12,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 13
     }
    ],
    "source": [
@@ -329,32 +397,66 @@
    ]
   },
   {
+   "source": [
+    "Wires can be used as curves with an adaptor, such as `BRepAdaptor_CompCurve`."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "boring-shuttle",
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "True"
       ]
      },
-     "execution_count": 13,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 14
     }
    ],
    "source": [
-    "# adaptors let you use one kind of object as another, here Wire as Curve\n",
     "adaptor = BRepAdaptor_CompCurve(bounds)\n",
     "adaptor.Value(0.5)\n",
     "adaptor.IsClosed()"
    ]
   },
   {
+   "source": [
+    "Using modeling APIs, more complex shapes can be built up from geometry and topology objects."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create a linear swept topology, which OCCT calls a prism\n",
+    "# and Rhino calls an extrusion\n",
+    "distance = 10\n",
+    "vector = gp_Vec(0, 0, distance)\n",
+    "extrusion = BRepPrimAPI_MakePrism(face, vector).Shape()\n",
+    "\n",
+    "# if a direction is provided instead of a vector\n",
+    "# the extrusion should be infinite\n",
+    "# see \"Finite, infinite, and semi-infinite prisms\" in the guide\n",
+    "direction = gp_Dir(0, 0, 1)\n",
+    "extrusion_infinite = BRepPrimAPI_MakePrism(face, direction).Shape()\n",
+    "\n",
+    "# note: shapes of infinite prisms don't work with the Jupyter renderer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "neural-consultation",
    "metadata": {},
    "outputs": [],
@@ -366,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "id": "ambient-detector",
    "metadata": {},
    "outputs": [],
@@ -376,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "boxed-creator",
    "metadata": {},
    "outputs": [],
@@ -386,28 +488,176 @@
     "loft.AddWire(curve_to_wire(crv2))\n",
     "loft.AddWire(curve_to_wire(offset_result))\n",
     "loft.AddWire(curve_to_wire(offset_2))\n",
-    "loft_result = loft.Shape()"
+    "#loft.AddWire(curve_to_wire(crv2)) # add last one as first to close\n",
+    "loft_result = loft.Shape()\n",
+    "# how to make solid? (cap holes?)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 19,
    "id": "induced-input",
    "metadata": {},
    "outputs": [
     {
+     "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "True"
+       "<class 'TopoDS_Solid'>"
       ]
      },
-     "execution_count": 48,
      "metadata": {},
-     "output_type": "execute_result"
+     "execution_count": 19
     }
    ],
    "source": [
-    "loft_result.Closed()"
+    "loft_result"
+   ]
+  },
+  {
+   "source": [
+    "Boolean operations are accomplished through the OCCT BRepAlgoAPI, which provides FUSE (union), COMMON (intersection) and CUT (difference) operators, explained [here](https://dev.opencascade.org/doc/overview/html/specification__boolean_operations.html). These can all work with infinite and semi-infinite prisms."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coords = [\n",
+    "    (0,0,0),\n",
+    "    (1,0,0),\n",
+    "    (1,1,0),\n",
+    "    (0,1,0),\n",
+    "    (0,0,0)\n",
+    "]\n",
+    "\n",
+    "curve = coords_to_curve(coords)\n",
+    "polygon = coords_to_polygon(coords)\n",
+    "face = BRepBuilderAPI_MakeFace(polygon).Shape()\n",
+    "distance = 10\n",
+    "vector = gp_Vec(0, 0, distance)\n",
+    "extrusion = BRepPrimAPI_MakePrism(face, vector).Shape()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<class 'TopoDS_Solid'>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 21
+    }
+   ],
+   "source": [
+    "\n",
+    "cutter_coords = [\n",
+    "    (0,0,2),\n",
+    "    (1,0,2),\n",
+    "    (1,1,3),\n",
+    "    (0,1,3),\n",
+    "    (0,0,2)\n",
+    "]\n",
+    "\n",
+    "polygon = coords_to_polygon(cutter_coords)\n",
+    "face = BRepBuilderAPI_MakeFace(polygon).Shape()\n",
+    "direction = gp_Dir(0, 0, 1)\n",
+    "# make it infinite in positive z only\n",
+    "cutter_prism = BRepPrimAPI_MakePrism(face, direction, False).Shape()\n",
+    "cutter_prism"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<class 'TopoDS_Compound'>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 22
+    }
+   ],
+   "source": [
+    "result = BRepAlgoAPI_Cut(extrusion, cutter_prism).Shape()\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c2 = [\n",
+    "  (0.2,0.5,0), # start\n",
+    "  (0.8,0.5,0), # end\n",
+    "]\n",
+    "\n",
+    "# 2d plane\n",
+    "plane_origin = gp_Pnt(0,0,0)\n",
+    "plane_dir = gp_Dir(0,0,1)\n",
+    "plane_2d = gp_Pln(plane_origin, plane_dir)\n",
+    "\n",
+    "bounds_2d = geomapi_To2d(curve, plane_2d)\n",
+    "\n",
+    "edge_curve = coords_to_curve(c2)\n",
+    "edge_2d = geomapi_To2d(edge_curve, plane_2d)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "<class 'Geom_BSplineCurve'>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 24
+    }
+   ],
+   "source": [
+    "# extend/trim ends of offset lot line to meet bounds curve\n",
+    "extended = []\n",
+    "\n",
+    "for i, p in enumerate([edge_2d.Value(0), edge_2d.Value(1)]):\n",
+    " pn = Geom2dAPI_ProjectPointOnCurve(p, bounds_2d).NearestPoint()\n",
+    " pnt = (pn.X(), pn.Y(), 0)\n",
+    " extended.append(pnt)\n",
+    "\n",
+    "ext_crv = coords_to_curve(extended)\n",
+    "ext_crv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "up_vec = gp_Vec(0,0,1)\n",
+    "ext_crv_up = ext_crv\n",
+    "ext_crv_up.Translate(up_vec)"
    ]
   },
   {
@@ -424,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 26,
    "id": "celtic-square",
    "metadata": {},
    "outputs": [],
@@ -435,37 +685,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 29,
    "id": "academic-acrobat",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
+     "output_type": "display_data",
      "data": {
+      "text/plain": "HBox(children=(VBox(children=(HBox(children=(Checkbox(value=False, description='Axes', layout=Layout(height='a…",
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5533dd9fcd2445ad8d3214bcef7b0819",
        "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(VBox(children=(HBox(children=(Checkbox(value=True, description='Axes', layout=Layout(height='au…"
-      ]
+       "version_minor": 0,
+       "model_id": "ba069e94c41748fc8659f60cd9393dd7"
+      }
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "metadata": {}
     }
    ],
    "source": [
-    "renderer.DisplayShape(loft_result, render_edges=True, topo_level=\"default\", shape_color=\"#abdda4\", update=True)"
+    "renderer.DisplayShape(polygon, render_edges=True, topo_level=\"default\", shape_color=\"#abdda4\", update=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python386jvsc74a57bd06b7886ffce86878e0d0b87f814a091cfe8a6f59efc2e40a7db088c57f37d22a3",
+   "display_name": "Python 3.8.6 64-bit ('zoning': conda)"
   },
   "language_info": {
    "codemirror_mode": {
