--- a/udtools/notebooks/zoninglot_from_topology.ipynb
+++ b/udtools/notebooks/zoninglot_from_topology.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "afraid-causing",
    "metadata": {},
    "outputs": [],
@@ -32,20 +32,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "damaged-chicken",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'generated'",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-0db4fed2e6af>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgeography\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcoordinate_systems\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtest_studyarea_wgs84\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;31m# from geometry.common import coords_to_polygon, fuse_faces, multipolygon_to_faces, polyhedralsurfacez_to_brep, section_at, upgrade_brep, extrude_face\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexistingbuilding\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mExistingBuilding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/git/ud-server/udtools/python/models/existingbuilding.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mconnectors\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpostgis\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mprepare_parameterized_query\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mgenerated\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msite_pb2_grpc\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSiteServiceStub\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgeometry\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommon\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpolyhedralsurfacez_to_brep\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgeometry\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mthree\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mserialize_shape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mmodels\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuilding\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mBuilding\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'generated'"
+     ]
+    }
+   ],
    "source": [
     "# udtools core imports\n",
-    "module_path = '../../core/python/'\n",
+    "module_path = '../python/'\n",
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
     "    \n",
     "from connectors.postgis import prepare_parameterized_query_from_string\n",
     "from geography.coordinate_systems import crs_wgs84, crs_webmercator, crs_nystateplane, wgs84_to_nystateplane, point_nycityhall_wgs84\n",
     "from geography.coordinate_systems import test_studyarea_wgs84\n",
-    "from geometry.common import coords_to_polygon, fuse_faces, multipolygon_to_faces, polyhedralsurfacez_to_brep, section_at, upgrade_brep, extrude_face\n",
+    "# from geometry.common import coords_to_polygon, fuse_faces, multipolygon_to_faces, polyhedralsurfacez_to_brep, section_at, upgrade_brep, extrude_face\n",
     "from models.existingbuilding import ExistingBuilding"
    ]
   },
@@ -723,9 +736,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python386jvsc74a57bd06b7886ffce86878e0d0b87f814a091cfe8a6f59efc2e40a7db088c57f37d22a3",
+   "display_name": "Python 3.8.6 64-bit ('zoning': conda)"
   },
   "language_info": {
    "codemirror_mode": {
