updates geometry calcs notebook

--- a/udtools/notebooks/geometry_calcs.ipynb
+++ b/udtools/notebooks/geometry_calcs.ipynb
@@ -30,7 +30,8 @@
    "source": [
     "import sys\n",
     "import re\n",
-    "import math"
+    "import math\n",
+    "import copy"
    ]
   },
   {
@@ -67,8 +68,12 @@
     "\n",
     "# --- MODELING DATA ---\n",
     "\n",
-    "from OCC.Core.gp import gp_Pnt, gp_Pnt2d, gp_Vec, gp_Dir, gp_Ax2, gp_Pln # primitives\n",
-    "from OCC.Core.Geom2d import Geom2d_Curve\n",
+    "from OCC.Core.gp import gp_Pnt, gp_Pnt2d, gp_Vec, gp_Dir, gp_Ax1, gp_Ax2, gp_Pln, gp_Trsf # primitives\n",
+    "from OCC.Core.TopLoc import TopLoc_Location\n",
+    "from OCC.Core.Geom2d import (\n",
+    "    Geom2d_Curve, \n",
+    "    Geom2d_OffsetCurve,\n",
+    ")\n",
     "from OCC.Core.Geom import Geom_Curve, Geom_OffsetCurve\n",
     "from OCC.Core.gce import gce_MakePln, gce_MakeLin # direct construction\n",
     "from OCC.Core.TopoDS import TopoDS_Iterator\n",
@@ -88,6 +93,7 @@
     "    Geom2dAPI_InterCurveCurve,\n",
     "    Geom2dAPI_ProjectPointOnCurve,\n",
     ")\n",
+    "\n",
     "from OCC.Core.GeomAPI import (\n",
     "    geomapi_To3d,\n",
     "    geomapi_To2d,\n",
@@ -133,6 +139,7 @@
     "if module_path not in sys.path:\n",
     "    sys.path.append(module_path)\n",
     "    \n",
+    "from geometry.brep import loft_wires, upgrade\n",
     "from geometry.conversion import (\n",
     "    wkt_to_occ, \n",
     "    wire_to_face, \n",
@@ -142,7 +149,18 @@
     "    curve_to_face, \n",
     "    curve_to_wire,\n",
     "    coords_to_polygon,\n",
-    ")"
+    ")\n",
+    "from geometry.curve import (\n",
+    "    fit_offset_to_bounds,\n",
+    "    offset,\n",
+    "    lift,\n",
+    ")\n",
+    "from geometry.reference import (\n",
+    "    world_origin,\n",
+    "    world_pos_z,\n",
+    "    world_xy,\n",
+    ")\n",
+    "from geometry.zoning import build_yard_cutter"
    ]
   },
   {
@@ -270,17 +288,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "<class 'gp_Pnt'>\n<class 'gp_Pnt'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
@@ -332,6 +342,19 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get point on and tangent vector at param U of 0.5\n",
+    "# p = gp_Pnt()\n",
+    "# v = gp_Vec()\n",
+    "# print(v.X())\n",
+    "# edge_curve.D1(0.5, p, v)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "exclusive-flour",
    "metadata": {},
    "outputs": [],
@@ -342,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "radical-savannah",
    "metadata": {},
    "outputs": [],
@@ -373,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "outdoor-sweet",
    "metadata": {},
    "outputs": [
@@ -385,7 +408,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 14
     }
    ],
    "source": [
@@ -405,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "boring-shuttle",
    "metadata": {},
    "outputs": [
@@ -417,7 +440,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 15
     }
    ],
    "source": [
@@ -435,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "neural-consultation",
    "metadata": {},
    "outputs": [],
@@ -468,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "ambient-detector",
    "metadata": {},
    "outputs": [],
@@ -478,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "boxed-creator",
    "metadata": {},
    "outputs": [],
@@ -494,27 +517,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "induced-input",
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<class 'TopoDS_Solid'>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 19
-    }
-   ],
-   "source": [
-    "loft_result"
-   ]
-  },
-  {
    "source": [
     "Boolean operations are accomplished through the OCCT BRepAlgoAPI, which provides FUSE (union), COMMON (intersection) and CUT (difference) operators, explained [here](https://dev.opencascade.org/doc/overview/html/specification__boolean_operations.html). These can all work with infinite and semi-infinite prisms."
    ],
@@ -523,79 +525,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define \"zoning lot\" bounds as OCC curve\n",
     "coords = [\n",
     "    (0,0,0),\n",
     "    (1,0,0),\n",
-    "    (1,1,0),\n",
+    "    (1.1,1,0),\n",
     "    (0,1,0),\n",
     "    (0,0,0)\n",
     "]\n",
     "\n",
-    "curve = coords_to_curve(coords)\n",
-    "polygon = coords_to_polygon(coords)\n",
-    "face = BRepBuilderAPI_MakeFace(polygon).Shape()\n",
-    "distance = 10\n",
-    "vector = gp_Vec(0, 0, distance)\n",
-    "extrusion = BRepPrimAPI_MakePrism(face, vector).Shape()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<class 'TopoDS_Solid'>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 21
-    }
-   ],
-   "source": [
-    "\n",
-    "cutter_coords = [\n",
-    "    (0,0,2),\n",
-    "    (1,0,2),\n",
-    "    (1,1,3),\n",
-    "    (0,1,3),\n",
-    "    (0,0,2)\n",
-    "]\n",
-    "\n",
-    "polygon = coords_to_polygon(cutter_coords)\n",
-    "face = BRepBuilderAPI_MakeFace(polygon).Shape()\n",
-    "direction = gp_Dir(0, 0, 1)\n",
-    "# make it infinite in positive z only\n",
-    "cutter_prism = BRepPrimAPI_MakePrism(face, direction, False).Shape()\n",
-    "cutter_prism"
+    "bounds = coords_to_curve(coords)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<class 'TopoDS_Compound'>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 22
-    }
-   ],
+   "outputs": [],
    "source": [
-    "result = BRepAlgoAPI_Cut(extrusion, cutter_prism).Shape()\n",
-    "result"
+    "# use the same coordinate sequence to make an extrusion to use as the basis of the envelope\n",
+    "\n",
+    "polygon = coords_to_polygon(coords)\n",
+    "face = BRepBuilderAPI_MakeFace(polygon).Shape()\n",
+    "distance = 3\n",
+    "vector = gp_Vec(0, 0, distance)\n",
+    "extrusion = BRepPrimAPI_MakePrism(face, vector).Shape()"
    ]
   },
   {
@@ -604,20 +562,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c2 = [\n",
-    "  (0.2,0.5,0), # start\n",
-    "  (0.8,0.5,0), # end\n",
+    "# define a planar cutter\n",
+    "# infinite in the positive z direction only\n",
+    "# use this to set lower limit for parking garage,\n",
+    "# maximum height\n",
+    "# sky exposure planes etc\n",
+    "\n",
+    "cutter_coords = [\n",
+    "    (0,0,2),\n",
+    "    (1,0,2),\n",
+    "    (1.1,1,3),\n",
+    "    (0,1,3),\n",
+    "    (0,0,2)\n",
     "]\n",
     "\n",
-    "# 2d plane\n",
-    "plane_origin = gp_Pnt(0,0,0)\n",
-    "plane_dir = gp_Dir(0,0,1)\n",
-    "plane_2d = gp_Pln(plane_origin, plane_dir)\n",
-    "\n",
-    "bounds_2d = geomapi_To2d(curve, plane_2d)\n",
-    "\n",
-    "edge_curve = coords_to_curve(c2)\n",
-    "edge_2d = geomapi_To2d(edge_curve, plane_2d)\n"
+    "polygon = coords_to_polygon(cutter_coords)\n",
+    "face = BRepBuilderAPI_MakeFace(polygon).Shape()\n",
+    "direction = gp_Dir(0, 0, 1)\n",
+    "sloped_cutter = BRepPrimAPI_MakePrism(\n",
+    "    face, \n",
+    "    direction, \n",
+    "    False\n",
+    ").Shape()"
    ]
   },
   {
@@ -626,38 +592,140 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "<class 'Geom_BSplineCurve'>"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 24
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "curve 1:\n...set back by 0.2\n...elevated by 0\ncurve 2:\n...set back by 0.2\n...elevated by 0.5\ncurve 3:\n...set back by 0.4\n...elevated by 0.5\ncurve 4:\n...set back by 0.4\n...elevated by 0.7\n"
+     ]
     }
    ],
    "source": [
-    "# extend/trim ends of offset lot line to meet bounds curve\n",
-    "extended = []\n",
+    "# define one lot edge and setback, make cutter\n",
     "\n",
-    "for i, p in enumerate([edge_2d.Value(0), edge_2d.Value(1)]):\n",
-    " pn = Geom2dAPI_ProjectPointOnCurve(p, bounds_2d).NearestPoint()\n",
-    " pnt = (pn.X(), pn.Y(), 0)\n",
-    " extended.append(pnt)\n",
+    "c1 = [\n",
+    "  (0,0,0), # start\n",
+    "  (1,0,0), # end\n",
+    "]\n",
     "\n",
-    "ext_crv = coords_to_curve(extended)\n",
-    "ext_crv"
+    "c1_dims = [\n",
+    "  [0.2, 0], # 4' yard\n",
+    "  [0.2, 0.5], # 5' base height\n",
+    "  [0.4, 0.5], # +1' setback\n",
+    "  [0.4, 0.7], # 7' roof ht\n",
+    "]\n",
+    "\n",
+    "c1 = coords_to_curve(c1)\n",
+    "loft_1 = build_yard_cutter(c1, bounds, c1_dims)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "curve 1:\n...set back by 0.1\n...elevated by 0\ncurve 2:\n...set back by 0.1\n...elevated by 0.5\ncurve 3:\n...set back by 0.2\n...elevated by 0.5\ncurve 4:\n...set back by 0.2\n...elevated by 0.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define a second lot edge and setback, make cutter\n",
+    "\n",
+    "c2 = [\n",
+    "  (1.1,1,0),\n",
+    "  (0,1,0),\n",
+    "]\n",
+    "\n",
+    "c2_dims = [\n",
+    "  [0.1, 0], # 4' yard\n",
+    "  [0.1, 0.5], # 5' base height\n",
+    "  [0.2, 0.5], # +1' setback\n",
+    "  [0.2, 0.7], # 7' roof ht\n",
+    "]\n",
+    "\n",
+    "c2 = coords_to_curve(c2)\n",
+    "loft_2 = build_yard_cutter(c2, bounds, c2_dims)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "curve 1:\n...set back by 0.1\n...elevated by 0\ncurve 2:\n...set back by 0.1\n...elevated by 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# one more...\n",
+    "\n",
+    "c3 = [\n",
+    "  (0,1,0),\n",
+    "  (0,0,0),\n",
+    "]\n",
+    "\n",
+    "c3_dims = [\n",
+    "  [0.1, 0],\n",
+    "  [0.1, 1],\n",
+    "]\n",
+    "\n",
+    "c3 = coords_to_curve(c3)\n",
+    "loft_3 = build_yard_cutter(c3, bounds, c3_dims)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "up_vec = gp_Vec(0,0,1)\n",
-    "ext_crv_up = ext_crv\n",
-    "ext_crv_up.Translate(up_vec)"
+    "# iterate through cutters to trim down initial extrusion\n",
+    "result = extrusion\n",
+    "\n",
+    "for c in [sloped_cutter, loft_1, loft_2, loft_3]:\n",
+    "  result = BRepAlgoAPI_Cut(result, c).Shape()\n",
+    "\n",
+    "result = upgrade(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "celtic-square",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# set up renderer\n",
+    "renderer = JupyterRenderer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "display_data",
+     "data": {
+      "text/plain": "HBox(children=(VBox(children=(HBox(children=(Checkbox(value=True, description='Axes', layout=Layout(height='au…",
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "60567e6fb47449cc854d55f7640e0d0e"
+      }
+     },
+     "metadata": {}
+    }
+   ],
+   "source": [
+    "renderer.DisplayShape(result, render_edges=True, topo_level=\"default\", shape_color=\"#abdda4\", update=True)"
    ]
   },
   {
@@ -671,49 +739,6 @@
     "- Can sequences be cast to arrays?\n",
     "- To confirm, do geometry objects need to be put into a topology structure before they can be rendered? Exported?\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "id": "celtic-square",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# set up renderer\n",
-    "renderer = JupyterRenderer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "academic-acrobat",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "output_type": "display_data",
-     "data": {
-      "text/plain": "HBox(children=(VBox(children=(HBox(children=(Checkbox(value=False, description='Axes', layout=Layout(height='a…",
-      "application/vnd.jupyter.widget-view+json": {
-       "version_major": 2,
-       "version_minor": 0,
-       "model_id": "ba069e94c41748fc8659f60cd9393dd7"
-      }
-     },
-     "metadata": {}
-    }
-   ],
-   "source": [
-    "renderer.DisplayShape(polygon, render_edges=True, topo_level=\"default\", shape_color=\"#abdda4\", update=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
